Fix baseURL and post date for GitHub Pages

--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = "https://example.com/"
+baseURL = "https://cdowell09.github.io/blog/"
 languageCode = "en-us"
 title = "Christian's Blog"
 enableRobotsTXT = true
